2012-05-07 John Wu <John dot Wu at ACM dot org>
	* src/bitvector64.cpp: add extract checks in bitwise logical
	operations to deal with 0-length fills (a problem reported by
	Srikanth Sundarrajan <srikanth.sundarrajan at inmobi.com>)

2012-05-06 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h, src/bitvector.cpp: add function getBit at the
	request of Suprio Ray <suprio at cs.toronto.edu>

2012-04-09 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: add function text::readStrings to deal with
	the case where the content of .sp file can not be read into memory

2012-04-08 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp, src/selectParser.yy: add call to fabs when
	computing variance and standard deviation to avoid numerical
	problems (per discussion with Alexandre Maurel)
	* tests/Makefile.am: update really-small to exercise the modified
	versions of standard deviation
	* src/fileManager.cpp: remove the restrict on memory usage based
	ULONG_MAX (when ULONG is a 32-bit int, this unnecessarily limits
	the memory use to 3GB)

2012-04-04 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp: change the verboseness level to 2 for
	printing fileManager construction and destruction message

2012-04-03 John Wu <John dot Wu at ACM dot org>
	* examples/tcapi.c: add code to use fastbit_get_result_row_ids
	* java/FastBit.c:
	Java_gov_lbl_fastbit_FastBit_get_1result_1row_1ids mistakenly
	passed jintArray as uint32_t* to fastbit_get_result_row_ids

2012-04-01 John Wu <John dot Wu at ACM dot org>
	* java/gov/lbl/fastbitFastBit.java, java/FastBit.h,
	java/FastBit.c: add function fastbit_get_result_row_ids

2013-03-31 John Wu <John dot Wu at ACM dot org>
	* src/capi.h, src/capi.cpp: add function
	fastbit_get_result_row_ids

2013-03-28 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: update documentation of ibis::bord::groupbya to
	clarify the operations carried out

2013-03-27 John Wu <John dot Wu at ACM dot org>